statum-macros/tests/ui/invalid_transition_no_methods.stderr
error: Error: `#[transition]` impl for `Machine<A>` must contain at least one transition method.
       Found: `impl Machine<A> {}`
       Expected: `fn submit(self) -> Machine<NextState>` or a supported wrapper around that same machine path
       Fix: add at least one method that consumes `self` and returns the next `#[machine]` state.
  --> tests/ui/invalid_transition_no_methods.rs:24:6
   |
24 | impl Machine<A> {}
   |      ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_no_methods.rs:24:19
   |
24 | impl Machine<A> {}
   |                   ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_no_methods.rs`
